# InvoiceParser

./: .gitignore  README.md  config.json  main.py  pyproject.toml
src/: document_processor.py  google_client.py
